1999-11-30  K.J. Paradise (kj@sourcegear.com)

	* history.c: fixed seg fault caused by 11-03 changes.  
	off by one in block memory allocations. 

1999-11-29  Karl Fogel  <kfogel@red-bean.com>

	* login.c (logout): free `tmp_name' when done.
	Correct a comment.

1999-11-29  Larry Jones <larry.jones@sdrc.com>

	* cvs.h, error.c, import.c: Rename fperror to avoid name clash
	on LynxOS.  (Reported by Markus Braun <MarkusBraun@gmx.de>.)

1999-11-23  Larry Jones <larry.jones@sdrc.com>

	* checkout.c (checkout_proc): Split declaration and initialization
	of rp to placate neurotic compilers that gripe about jumping past
	an initialization, even when the variable is not subsequently used.

1999-11-19  Larry Jones <larry.jones@sdrc.com>

	* server.c (switch_to_user): Correct setgid error messages.

1999-11-19  Karl Fogel  <kfogel@red-bean.com>

	* edit.c (unedit_usage, unedit): new struct, use it.  Now "cvs
	unedit" prints an accurate usage message (formerly it printed the
	message for "cvs edit", even though the two commands do not have
	identical usages).
	
1999-11-19  Larry Jones <larry.jones@sdrc.com>

	* history.c: Move -e documentation from Flags to Reports.
	(history): Add -e to list of report types in error message.

	* history.c (history): Process file arguments before client/server
	processing so they get sent to the server.
	* sanity.sh (history): New tests for above.  (Also remove comments
	about variable spacing -- history output is in variable-width
	columns with exactly one space between.)

1999-11-19  Larry Jones <larry.jones@sdrc.com>

	* sanity.sh: Reestablish check for running as root (using ``id -u''
	instead of ``whoami'').

	* sanity.sh(dotest, dotest_lit, dotest_fail, dotest_status,
	dotest_sort): Eval the command so quoting and pipes work right.
	(spacefiles, dirs, rcslib, modules, unedit-without-baserev,
	ignore, rcs, rcs2, history, tagdate, pserver, server, server2)
	Simplify various tests based on above.
