@@ -1757,6 +1757,13 @@ remove_file (finfo, tag, message)
 		   "failed to commit dead revision for `%s'", finfo->fullname);
 	return (1);
     }
+/* At this point, the file has been committed as removed.  We should 
+        probably tell the history file about it  */
+    history_write ('R', 
+                  finfo->update_dir, 
+                  finfo->rcs->head,
+                  finfo->file,
+                  finfo->repository);
 
     if (rev != NULL)
 	free (rev);
